--- a/src/styles/default.scss
+++ b/src/styles/default.scss
@@ -70,3 +70,36 @@ a {
         }
     }
 }
+
+.input-card-number {
+    position: relative;
+    .input-card-img {
+        position: absolute;
+        top: 3px;
+        right: 10px;
+        img {
+            width: 32px;
+            opacity: 0.5;
+        }
+        .active-visa {
+            opacity: 1;
+        }
+        .active-mastercard {
+            opacity: 1;
+        }
+    }
+}
+
+.btn-submit {
+    background: #dca16b;
+    box-shadow: 0px 3px 20px rgb(0 0 0 / 10%);
+    border-radius: 4px;
+    border: none;
+    padding: 12px 28px;
+    color: #fff;
+    cursor: pointer;
+}
+
+.btn-submit:disabled{
+  opacity: 0.5;
+}
